Add section About us

--- a/index.html
+++ b/index.html
@@ -207,6 +207,26 @@
                     </li>
                 </ul>
             </section>
+
+            <!-- About us -->
+            <section class="about">
+                <div class="about_bgImg"></div>
+                <div class="about_Img">
+                    <div class="image"></div>
+                </div>
+                <div class="about_content">
+                    <h2 class="title">About us</h2>
+                    <h3 class="details">
+                        We provide quality coffee, and ready to deliver.
+                    </h3>
+                    <p class="desc">
+                        We are a company that makes and distributes delicious
+                        drinks. our main product is made with a secret recipe
+                        and available in stores worldwide.
+                    </p>
+                    <button class="btn">Get your coffee</button>
+                </div>
+            </section>
         </main>
     </body>
 </html>
