--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <ul class="popular_card_group">
                     <li class="popular_card_item">
                         <div class="content">
-                            <div class="content_img">
+                            <div class="content_img img1">
                                 <div class="rating">
                                     <div class="rating_content">
                                         <span>4.8</span>
@@ -117,7 +117,7 @@
                     </li>
                     <li class="popular_card_item">
                         <div class="content">
-                            <div class="content_img">
+                            <div class="content_img img2">
                                 <div class="rating">
                                     <div class="rating_content">
                                         <span>4.8</span>
@@ -146,7 +146,7 @@
                     </li>
                     <li class="popular_card_item">
                         <div class="content">
-                            <div class="content_img">
+                            <div class="content_img img3">
                                 <div class="rating">
                                     <div class="rating_content">
                                         <span>4.8</span>
@@ -227,6 +227,241 @@
                     <button class="btn">Get your coffee</button>
                 </div>
             </section>
+
+            <!-- Menu -->
+            <section class="menu">
+                <h2 class="menu_title">Special menu for you</h2>
+                <ul class="menu_cardGroup">
+                    <li class="item">
+                        <div class="item_content">
+                            <div class="img img1">
+                                <div class="rating">
+                                    <div class="rating_content">
+                                        <span>4.8</span>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="body">
+                                <div class="body_info">
+                                    <span class="name">Sandwich</span>
+                                    <span class="price">12 K</span>
+                                </div>
+                                <div class="body_frame">
+                                    <p class="detail">
+                                        bread with meat and vegetables
+                                    </p>
+                                    <div class="addToCart">
+                                        <i
+                                            class="fa-solid fa-cart-shopping"
+                                        ></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="item_content">
+                            <div class="img img2">
+                                <div class="rating">
+                                    <div class="rating_content">
+                                        <span>4.8</span>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="body">
+                                <div class="body_info">
+                                    <span class="name">Hot Milk</span>
+                                    <span class="price">12 K</span>
+                                </div>
+                                <div class="body_frame">
+                                    <p class="detail">
+                                        Hot Milk with less sugar
+                                    </p>
+                                    <div class="addToCart">
+                                        <i
+                                            class="fa-solid fa-cart-shopping"
+                                        ></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="item_content">
+                            <div class="img img3">
+                                <div class="rating">
+                                    <div class="rating_content">
+                                        <span>4.8</span>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="body">
+                                <div class="body_info">
+                                    <span class="name">Coffe Ice Cream</span>
+                                    <span class="price">12 K</span>
+                                </div>
+                                <div class="body_frame">
+                                    <p class="detail">
+                                        Coffe with ice cream vanilla
+                                    </p>
+                                    <div class="addToCart">
+                                        <i
+                                            class="fa-solid fa-cart-shopping"
+                                        ></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="item_content">
+                            <div class="img img4">
+                                <div class="rating">
+                                    <div class="rating_content">
+                                        <span>4.8</span>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="body">
+                                <div class="body_info">
+                                    <span class="name">Cappucino</span>
+                                    <span class="price">12 K</span>
+                                </div>
+                                <div class="body_frame">
+                                    <p class="detail">Hot Cappucino</p>
+                                    <div class="addToCart">
+                                        <i
+                                            class="fa-solid fa-cart-shopping"
+                                        ></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="item_content">
+                            <div class="img img5">
+                                <div class="rating">
+                                    <div class="rating_content">
+                                        <span>4.8</span>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="body">
+                                <div class="body_info">
+                                    <span class="name">Moccacinno</span>
+                                    <span class="price">12 K</span>
+                                </div>
+                                <div class="body_frame">
+                                    <p class="detail">Hot Moccacin</p>
+                                    <div class="addToCart">
+                                        <i
+                                            class="fa-solid fa-cart-shopping"
+                                        ></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="item_content">
+                            <div class="img img6">
+                                <div class="rating">
+                                    <div class="rating_content">
+                                        <span>4.8</span>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="body">
+                                <div class="body_info">
+                                    <span class="name">Waffle Ice Crem</span>
+                                    <span class="price">12 K</span>
+                                </div>
+                                <div class="body_frame">
+                                    <p class="detail">Wafle with Ice cream</p>
+                                    <div class="addToCart">
+                                        <i
+                                            class="fa-solid fa-cart-shopping"
+                                        ></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+
+            <!-- Testimonial -->
+            <section class="testimonial">
+                <div class="testimonial_content">
+                    <h2 class="title">What they say about us</h2>
+                    <p class="details">
+                        We always provide the best service and always maintain
+                        the quality of coffee
+                    </p>
+                </div>
+                <ul class="testimonial_cardGroup">
+                    <li class="item">
+                        <div class="item_img img1"></div>
+                        <div class="item_body">
+                            <div class="content">
+                                <h3 class="content_name">Naura</h3>
+                                <p class="content_comment">
+                                    I really love the cappucino, the coffee was
+                                    very smooth
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="item_img img2"></div>
+                        <div class="item_body">
+                            <div class="content">
+                                <h3 class="content_name">John</h3>
+                                <p class="content_comment">
+                                    this coffee shop is very convenient
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="item_img img3"></div>
+                        <div class="item_body">
+                            <div class="content">
+                                <h3 class="content_name">Azura</h3>
+                                <p class="content_comment">
+                                    the coffee menu here is very much
+                                </p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="bullet">
+                        <div class="bullet_circle"></div>
+                        <div class="bullet_circle"></div>
+                        <div class="bullet_circle"></div>
+                    </li>
+                </ul>
+            </section>
         </main>
+
+        <!-- Footer -->
+        <footer>
+            <h2 class="title">Subscribe to get 50% discount price</h2>
+            <form action="/" class="form">
+                <input
+                    type="email"
+                    class="form_input"
+                    placeholder="Email address"
+                    required
+                />
+                <button type="submit" class="form_btn">Order now</button>
+            </form>
+        </footer>
     </body>
 </html>
